Changes: - added new endpoint: getting user rights by id
